force scrollbar to prevent jump of horizontal centered content

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html {
+	overflow-y: scroll; 
+}
 body {
   margin-top: 1.0em;
   background-color: #848284;
